--- a/mentor.html
+++ b/mentor.html
@@ -37,19 +37,19 @@
             <a href="#" class="button">Connect</a>
           </div>
           <div class="profile-card">
-            <img src="mentor/WhatsApp Image 2025-03-22 at 12.08.33 PM.jpeg" alt="image3" class="profile-icon" />
+            <img src="WhatsApp Image 2025-03-22 at 12.08.33 PM.jpeg" alt="image3" class="profile-icon" />
             <div class="profile-name">Junaid </div>
             <div class="profile-position">Tech mentor</div>
             <a href="#" class="button">Connect</a>
           </div>
           <div class="profile-card">
-            <img src="mentor/WhatsApp Image 2025-03-22 at 12.08.34 PM.jpeg" alt="image3" class="profile-icon" />
+            <img src="WhatsApp Image 2025-03-22 at 12.08.34 PM.jpeg" alt="image3" class="profile-icon" />
             <div class="profile-name">Rohit </div>
             <div class="profile-position">Tech mentor</div>
             <a href="#" class="button">Connect</a>
           </div>
           <div class="profile-card">
-            <img src="mentor/WhatsApp Image 2025-03-22 at 12.08.35 PM.jpeg" alt="image3" class="profile-icon" />
+            <img src="WhatsApp Image 2025-03-22 at 12.08.35 PM.jpeg" alt="image3" class="profile-icon" />
             <div class="profile-name">Aparana </div>
             <div class="profile-position">Tech mentor</div>
             <a href="#" class="button">Connect</a>
