--- a/memories.ablum.html
+++ b/memories.ablum.html
@@ -16,14 +16,14 @@
 <div class="grid"> 
 
   <img src="Squad80.jpeg"  />
-  <img src="photo/1 (1).jpeg">
-  <img src="photo/1 (2).jpeg">
-  <img src="photo/1 (3).jpeg">
-  <img src="photo/1 (4).jpeg">
-  <img src="photo/1 (5).jpeg">
-  <img src="photo/1 (6).jpeg">
-  <img src="photo/1 (7).jpeg">
-  <img src="photo/1 (8).jpeg"  />
+  <img src="1 (1).jpeg">
+  <img src="1 (2).jpeg">
+  <img src="1 (3).jpeg">
+  <img src="1 (4).jpeg">
+  <img src="1 (5).jpeg">
+  <img src="1 (6).jpeg">
+  <img src="1 (7).jpeg">
+  <img src="1 (8).jpeg"  />
   <img src="https://picsum.photos/200/300?random=10">
   <img src="https://picsum.photos/200/300?random=11">
   <img src="https://picsum.photos/200/300?random=12">
