--- a/project.html
+++ b/project.html
@@ -11,7 +11,7 @@
 <body>
     <nav class="custom-navbar">
         <ul class="nav-links">
-          <li class="logo">Kalvium x Chitkara</a></li>
+          <li class="logo"> <a href="index.html">Kalvium x Chitkara</a></li>
           <li><a href="squad.html">SQUAD 80</a></li>
           <li><a href="mentor.html">Mentor</a></li>
           <li><a href="project.html">Projects</a></li>
